cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/GFB_Kia_DCSI_Service_Survey__c.object-meta.xml
<CustomObject>
    <label>GFB KMC DCSI Service Survey</label>
    <nameField>
        <displayFormat>KSS-{00000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GFB KMC DCSI Service Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>