cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Aspect_of_the_Service_Issue__c.field-meta.xml
<CustomField>
    <fullName>Aspect_of_the_Service_Issue__c</fullName>
    <label>Aspect of the Service (Issue)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>