cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <formula>(VALUE( SUBSTITUTE( LEFT(Overall_Service_Experience__c, 2) , &quot; &quot;, &quot;&quot;) ) + 
VALUE( SUBSTITUTE( LEFT(Service_Advisor_Service_Rating__c, 2) , &quot; &quot;, &quot;&quot;) ))/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>