cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Issues_During_Service_Initiation__c.field-meta.xml
<CustomField>
    <fullName>Issues_During_Service_Initiation__c</fullName>
    <label>Issues During Service Initiation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>