cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Issues_Others__c.field-meta.xml
<CustomField>
    <fullName>Issues_Others__c</fullName>
    <label>Issues (Others)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>