cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Issues_with_Service_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Service_Advisor__c</fullName>
    <label>Issues with Service Advisor</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>