cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Likeliness_to_Visit_CNC_again__c.field-meta.xml
<CustomField>
    <fullName>Likeliness_to_Visit_CNC_again__c</fullName>
    <label>Likeliness to Visit CNC again</label>
    <length>200</length>
    <type>Text</type>
</CustomField>