cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Negative_Survey__c.field-meta.xml
<CustomField>
    <fullName>Negative_Survey__c</fullName>
    <formula>OR(NPS_Service_Experience__c  &lt; 8, CSAT_SC__c &lt;2.5, CSAT_Service_Experience__c &lt;5)</formula>
    <label>Negative_Survey</label>
    <type>Checkbox</type>
</CustomField>