cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/NPS_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>NPS_Service_Experience__c</fullName>
    <formula>VALUE(SUBSTITUTE(LEFT(Likeliness_to_Recommend_CNC__c , 2), &quot; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Service Experience (1-10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>