cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Overall_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Service_Experience__c</fullName>
    <label>Overall Service Experience</label>
    <length>200</length>
    <type>Text</type>
</CustomField>