cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Reasons_for_bringing_car_back_to_CNC__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_bringing_car_back_to_CNC__c</fullName>
    <label>Reasons for bringing car back to CNC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>