cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Reasons_for_uncertainty_CNC_Aftersales__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_uncertainty_CNC_Aftersales__c</fullName>
    <label>Reasons for uncertainty CNC Aftersales</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>