cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Satisfaction_on_Charges_Fairness__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_on_Charges_Fairness__c</fullName>
    <inlineHelpText>How satisfied were you with the fairness of the charges? (i.e. charges are appropriate to the list of work done)</inlineHelpText>
    <label>Satisfaction on Charges&apos; Fairness</label>
    <length>100</length>
    <type>Text</type>
</CustomField>