cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Satisfaction_on_Drop_Off_Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_on_Drop_Off_Timeliness__c</fullName>
    <inlineHelpText>How satisfied were you with timeliness of drop-off?</inlineHelpText>
    <label>Satisfaction on Drop-Off Timeliness</label>
    <length>100</length>
    <type>Text</type>
</CustomField>