cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Service_Advisor_Room_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Service_Advisor_Room_for_Improvement__c</fullName>
    <label>Service Advisor Room for Improvement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>