cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Service_Centre_Report_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Centre_Report_Group__c</fullName>
    <formula>CASE( Post_Service_Header__r.COMPANY_ID__c,
					&quot;41&quot;, &quot;PG&quot;,
					&quot;73&quot;, &quot;PG&quot;,
					&quot;81&quot;, &quot;PG&quot;,
										&quot;42&quot;, &quot;LK&quot;,
										&quot;72&quot;, &quot;LK&quot;,
										&quot;82&quot;, &quot;LK&quot;,
										&quot;45&quot;, &quot;SM&quot;,
									&quot;85&quot;, &quot;SM&quot;,
					&quot;01&quot;, &quot;Eunos&quot;,
				&quot;NA&quot;)</formula>
    <label>Service Centre Report Group</label>
    <type>Text</type>
</CustomField>