cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Service_Survey__c/fields/Workshop_Offer_Inspection_Before_Work__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Offer_Inspection_Before_Work__c</fullName>
    <inlineHelpText>Did the workshop offer to inspect the car with you before the work started?</inlineHelpText>
    <label>Workshop Offer Inspection Before Work?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>